<resources>
    <string name="app_name">课堂助手</string>

    <string name="tab_assistant">助手</string>
    <string name="tab_letter">校信</string>
    <string name="tab_curriculum">课表</string>
    <string name="tab_myself">我</string>

    <string name="grade">大四</string>
    <string name="term">第二学期</string>
    <string name="xfyun_id">=590d4be1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classroom">教室%1$7s</string>
    <string name="coursetiem">时间%1$6s</string>
    <string name="teacher">老师%1$6s</string>
    <string name="login_school">学校:%1$6s</string>
    <string name="registe_college">院系:%1$6s</string>
    <string name="registe_avatar">头像:%1$6s</string>
    <string name="course_name">课程%1$6s</string>
    <string name="section">节数%1$6s</string>
    <string name="top_name">前面是%1$s同学</string>
    <string name="bottom_name">后面是%1$s同学</string>
    <string name="left_name">左边是%1$s同学</string>
    <string name="right_name">右边是%1$s同学</string>
    <string name="center_name">&#160;我坐在了\n%1$s位置</string>
    <string name="weeks">周数&#160;&#160;1&#160;-&#160;16周</string>
    <string name="info_name">姓名%1$6s</string>
    <string name="info_mumber">学号%1$6s</string>
    <string name="info_college">学院%1$6s</string>
    <string name="add_course_title">添加课程</string>
    <string name="check_act_title">签到详情</string>
    <string name="add_course">添加到课表</string>
    <string name="remove_course">从课表移除</string>
    <string name="create_organization">创建组织</string>
    <string name="loading">努力加载中...</string>
    <string name="network_break">网络中断，请检查您的网络状态</string>
    <string name="suer_seat">我坐这了</string>
    <string name="synchron">同步</string>
    <string name="my_organ">我的组织</string>
    <string name="manage">管理</string>
    <string name="add_member">添加成员</string>
    <string name="remove_group">移除</string>
    <string name="contacts_title">通讯录</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="assistant_title">助手</string>
    <string name="assistant_notice">云通知</string>
    <string name="file_cloud">云课件</string>
    <string name="create_notice_title">新建云通知</string>

    <string name="avatar">头像</string>
    <string name="school">学校</string>
    <string name="college">院系</string>
    <string name="password">密码</string>
    <string name="name">姓名</string>
    <string name="user_number">学号/工号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_now">马上注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="select_school">选择学校</string>
    <string name="select_college">选择院系</string>
    <string name="student_register">我是学生</string>
    <string name="teacher_register">我是老师</string>
    <string name="notice_tip">点击输入文字</string>
    <string name="receive">接收者</string>
    <string name="send_way">发送方式</string>
    <string name="in_app">应用内</string>
    <string name="in_sms">短信通知</string>
    <string name="select_receiver">选择接收人</string>
    <string name="file_activity_title">我的课件</string>
    <string name="add_file_act_title">添加课件</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="face_recognition">人脸识别</string>
</resources>
