<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="200dp"
                android:padding="10dp">
    <TextView
        android:id="@+id/topNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_name"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/centerNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/center_name"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/leftNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/left_name"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/rightName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_name"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/bottomNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
