<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lzp.classroomassistant.login.RegisterActivity">




        <TextView
            android:id="@+id/schoolTxtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textColor="#9a9a9a"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#737373"/>
        <TextView
            android:id="@+id/collegeTxtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/college"
            android:textColor="#9a9a9a"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#737373"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear"
                android:hint="@string/name"
                android:inputType="textShortMessage"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/userNumberEditId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_number"
                android:textSize="16sp"
                android:inputType="number"
                android:drawableRight="@drawable/icon_clear"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="16sp"
                android:maxLength="18"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/usetype_group"
        android:layout_below="@+id/topLinear"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_register"
            android:checked="true"
            android:id="@+id/radio_student" />
        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_register"
            android:id="@+id/radio_teacher" />
    </RadioGroup>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/registerBtnId"
        android:background="@drawable/btn_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp" />


</LinearLayout>
