<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzp.classroomassistant.login.LoginActivity">

    <LinearLayout
        android:id="@+id/topLinearId"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/iconImage"
            android:src="@drawable/app_logo"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/schoolTxtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textColor="#9a9a9a"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#737373"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_number"
                android:textSize="16sp"
                android:inputType="number"
                android:drawableRight="@drawable/icon_clear"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="16sp"
                android:maxLength="18"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/loginBtnId"
            android:background="@drawable/btn_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp" />

        <!--<Button-->
        <!--android:id="@+id/btn_register"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@drawable/btn_orange"-->
        <!--android:text="@string/register"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="20sp"/>-->
    </LinearLayout>
    <TextView
        android:id="@+id/registerTxtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:layout_below="@+id/topLinearId"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@+id/topLinearId"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"/>
</RelativeLayout>
