<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.lzp.classroomassistant.presonal.MineFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="1dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">
        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注销"
            android:textColor="@android:color/white"
            android:background="@color/material_red"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/headerImageId"
            android:src="@drawable/icon_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/userMumberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameTxt"
            android:text="@string/info_mumber"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/userCollegeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_college"
            android:layout_below="@+id/userMumberTxt"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>
        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/userCollegeTxt"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/myOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/my_organ"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/view1"/>
        <TextView
            android:id="@+id/creatOrgan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/myOrganization"
            android:layout_alignParentRight="true"
            android:text="@string/create_organization"
            android:textColor="@color/colorPrimary"

            android:layout_marginEnd="10dp"/>
        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/creatOrgan"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:groupIndicator="@null"
        />


</LinearLayout>
