<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base_bg"
    tools:context="com.lzp.classroomassistant.assistant.notice.CreateNoticeActivity">

    <include layout="@layout/toolbar_layout"/>

    <EditText
        android:id="@+id/contentEditId"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:hint="@string/notice_tip"
        android:gravity="top"
        android:textSize="16sp"/>


    <RelativeLayout
        android:id="@+id/receiveLayoutId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/receive"
            android:textSize="16sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImage1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@+id/receive"
            android:visibility="invisible"

            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_head"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImage2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/avatarImage1"
            android:src="@drawable/icon_head"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImage3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/avatarImage2"
            android:src="@drawable/icon_head"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/countMemberTxtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/member_more"
            android:tint="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/send_way"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/sendWaygroupId"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/send"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_app"
                android:checked="true"
                android:id="@+id/inAppId" />
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_sms"
                android:id="@+id/inSmsId" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>
